--- a/hello/templates/layout.html
+++ b/hello/templates/layout.html
@@ -1,12 +1,11 @@
-{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 <body>
-   <h1>{{ans}}</h1> 
+    {% block body %}
+    {% endblock %}
 </body>
 </html>
