--- a/flights/templates/flight.html
+++ b/flights/templates/flight.html
@@ -11,6 +11,17 @@
         {{ flights.destination }}
     </li>
 </ol>
+<h2>add passenger</h2>
+<form action="{% url 'book' flight.id %}" method="post">
+    {% csrf_token %}
+    <select name="passenger" id="">
+        {% for passenger in non_passenger %}
+        <option value="{{ passenger.id }}">{{ passenger }}</option>
+        {% endfor %}
+    </select>
+    <input type="submit">
+ 
+</form>
 
-
+<a href="{% url 'index' %}">Back to flight list</a>
 {% endblock %}
